--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,8 +2,8 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # runs every day at midnight
-  workflow_dispatch:       # allow manual run
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
@@ -18,10 +18,10 @@ jobs:
       - name: Generate Snake
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: code-with-akki010   # replace with your GitHub username
+          github_user_name: code-with-akki010
           outputs: dist/github-contribution-grid-snake.svg
 
-      - name: Push to output branch
+      - name: Push Snake to output branch
         uses: EndBug/add-and-commit@v9
         with:
           add: "dist/github-contribution-grid-snake.svg"
